--- a/netty/pom.xml
+++ b/netty/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>netty</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.49.Final</version>
+        </dependency>
+    </dependencies>
 </project>
