--- a/springsecurity-oauth2/springsecurity-oauth2-client/pom.xml
+++ b/springsecurity-oauth2/springsecurity-oauth2-client/pom.xml
@@ -11,5 +11,18 @@
 
     <artifactId>springsecurity-oauth2-client</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+    </dependencies>
 </project>
